# rsdb

./: .gitignore  CMakeLists.txt  README.md  header.h  mem.c  mem.h  rsdb.c  rsdb.h  textblob.c  textblob.h  trie.c  trie.h  vmgr.c  vmgr.h
tests/: 01.c  CMakeLists.txt  config.rsdb
